--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^4.10.1",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "csv": "^6.2.7",
     "dotenv": "^16.0.3",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
