--- a/api/package.json
+++ b/api/package.json
@@ -9,8 +9,9 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --tsc --watch",
-    "start:watch": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:dev": "nest start --tsc --watch && npx prisma migrate dev",
+    "migrate": "npx prisma migrate dev",
+    "start:watch": "nest build --webpack --webpackPath webpack-hmr.config.js --watch && npx prisma migrate dev",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
