--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
     "csv": "^6.2.7",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
