--- a/api/package.json
+++ b/api/package.json
@@ -30,14 +30,15 @@
     "@prisma/client": "^4.10.1",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
-    "csv": "^6.2.7",
-    "csv-parser": "^3.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "csv": "^6.2.7",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
