--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,10 +1,13 @@
 FROM node:18-alpine
 
+RUN ["mkdir", "/install"]
+
+ADD ["./package.json", "/install"]
+WORKDIR /install
+ENV NODE_PATH=/install/node_modules
+RUN npm install 
+
 WORKDIR /client
-
-COPY package*.json ./
-
-RUN npm install
 
 COPY . .
 
