--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^3.0.1",
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.10.1",
     "@types/bcrypt": "^5.0.0",
