added cookie managment and auth for user

--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,4 @@
 DATABASE_URL="postgresql://username:password@localhost:6543/docker-postgres?schema=public"
+
+SECRETKEY=mycustomuselongsecret
+EXPIRESIN="60 days"
