--- a/.env
+++ b/.env
@@ -15,3 +15,6 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST
 
 MODE=DEV
 RUN_MIGRATIONS=true
+
+SECRETKEY=mycustomuselongsecret
+EXPIRESIN="60 days"
