elastic search and ingredient search

--- a/.env
+++ b/.env
@@ -18,3 +18,7 @@ RUN_MIGRATIONS=true
 
 SECRETKEY=mycustomuselongsecret
 EXPIRESIN="60 days"
+
+ELASTIC_PASSWORD="admin"
+ELASTIC_NODE="http://elasticsearch:9200"
+ELASTIC_USERNAME="elastic"
