--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     depends_on:
       - redis
       - postgres
+      - elasticsearch
   redis: # Name of container
     image: redis
     ports:
@@ -66,8 +67,40 @@ services:
     depends_on:
       - api
 
+  elasticsearch:
+    image: elasticsearch:7.13.0
+    container_name: elasticsearch
+    env_file: .env
+    environment:
+      - bootstrap.memory_lock=true
+      - discovery.type=single-node
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - ELASTIC_USERNAME=${ELASTIC_USERNAME}
+      - ELASTIC_NODE=${ELASTIC_NODE}
+    restart: unless-stopped
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+  kibana:
+    container_name: kibana
+    image: kibana:7.13.0
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    depends_on:
+      - elasticsearch
+    ports:
+      - 5601:5601
+
 volumes:
   postgresdata:
   pgadmin-data:
+  esdata:
+    driver: local
   redis:
     driver: local
