--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "next": "^13.2.1",
     "react": "^18.2.0"
   },
+  "scripts": {
+    "containers:dev": "docker-compose up --build -d",
+    "db:seed": "cd api && run npx prisma db seed",
+    "test:api": "cd api && jest"
+  },
   "devDependencies": {
     "tailwindcss": "^3.2.7"
   }
