--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,23 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.2",
-    "sass": "^1.58.1",
     "swiper": "^9.1.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.37.0",
+    "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.21",
+    "sass": "^1.60.0",
     "tailwindcss": "^3.2.7"
   }
 }
