--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,13 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.37.0",
     "eslint-config-next": "^13.2.4",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.7",
     "sass": "^1.60.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^5.0.3"
