--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,18 @@
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
     "next-auth": "^4.20.1",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.2",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.58.1",
     "swiper": "^9.1.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
+    "@types/react-transition-group": "^4.4.5",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
