--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,9 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.2",
     "react-transition-group": "^4.4.5",
-    "sass": "^1.58.1",
-    "swiper": "^9.1.1",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
+    "swiper": "^9.1.1"
+},
+"devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-transition-group": "^4.4.5",
