--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -10,6 +10,7 @@
         "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-explicit-any": "error",
         "no-console": "warn",
+        "react/no-unescaped-entities": "off",
         "import-helpers/order-imports": [
             "error",
             {
