test image build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,9 @@ stages:
 
 variables:
   RULES_CHANGES_PATH: "**/*"
+services:
+  - docker:20.10-dind
+
 
 .base-rules:
   image: node:18-alpine
@@ -51,11 +54,10 @@ lint_client:
 
 build-image:
   extends: .base-rules
-  image: docker:latest
-  services:
-    - docker:dind
+  image: docker:20.10
   stage: build
   script:
+    - cd api
     - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG .
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
