--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -2,10 +2,10 @@
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "project": "tsconfig.json",
-        "tsconfigRootDir": "__dirname",
+        "tsconfigRootDir": "./",
         "sourceType": "module"
     },
-    "plugins": ["@typescript-eslint/eslint-plugin", "eslint-plugin-import-helpers"],
+    "plugins": ["@typescript-eslint/eslint-plugin", "eslint-plugin-import-helpers", "unused-imports"],
     "extends": ["plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
     "root": true,
     "env": {
@@ -13,6 +13,7 @@
         "jest": false
     },
     "rules": {
+        "unused-imports/no-unused-imports-ts": "error",
         "@typescript-eslint/interface-name-prefix": "off",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
