--- a/api/package.json
+++ b/api/package.json
@@ -66,7 +66,9 @@
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "jest": "29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.3.2",
