build both images

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,13 +54,31 @@ lint_client:
   script:
     - npm run lint
 
-build-image:
-  extends: .base-rules
+build-api-image:
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: always
+    - if: '$CI_PIPELINE_SOURCE == "push"'
+      when: never
   image: docker:20.10-dind
   stage: build
   script:
     - cd api
-    - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG .
+    - docker build -t api:latest .
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+    - docker push api:latest
+
+build-client-image:
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+      when: always
+    - if: '$CI_PIPELINE_SOURCE == "push"'
+      when: never
+  image: docker:20.10-dind
+  stage: build
+  script:
+    - cd api
+    - docker build -t client:latest .
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker push client:latest
 
