--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ services:
   image: docker:20.10-dind
   stage: build
   rules:
-    - if: $CI_COMMIT_BRANCH == master
+    - if: $CI_COMMIT_BRANCH == "master"
       when: always
     - if: '$CI_PIPELINE_SOURCE == "push"'
       when: never
