--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,15 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.2",
     "react-transition-group": "^4.4.5",
-    "swiper": "^9.1.1"
-},
-"devDependencies": {
+    "swiper": "^9.1.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
-    "@types/react-transition-group": "^4.4.5",
     "@types/react-dom": "^18.0.11",
+    "@types/react-transition-group": "^4.4.5",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "autoprefixer": "^10.4.13",
