build prod docker image

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST
 MODE=DEV
 RUN_MIGRATIONS=true
 
-SECRETKEY=mycustomuselongsecret
+SECRETKEY="qY6aYs7lKasdgxuoEhQOMJiahxL56OzcGS+lXZlaUo4="
 EXPIRESIN="60 days"
 
 ELASTIC_PASSWORD="admin"
