--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,7 +74,7 @@ build-api-image:
 build-client-image:
   extends: .build-rules
   script:
-    - cd api
+    - cd frontend
     - docker build -t $CI_REGISTRY_IMAGE/client:latest .
     - docker push $CI_REGISTRY_IMAGE/client:latest
 
