--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,42 +1,44 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev -p 8080",
-    "build": "next build",
-    "start": "next start -p 8080",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.1.6",
-    "next": "13.1.6",
-    "next-auth": "^4.20.1",
-    "next-pwa": "^5.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-toastify": "^9.1.2",
-    "react-transition-group": "^4.4.5",
-    "swiper": "^9.1.1",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/react-transition-group": "^4.4.5",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.57.0",
-    "@typescript-eslint/parser": "^5.57.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.37.0",
-    "eslint-config-next": "^13.2.4",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import-helpers": "^1.3.1",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.7",
-    "sass": "^1.60.0",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^5.0.3"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 8080",
+        "build": "next build",
+        "start": "next start -p 8080",
+        "lint": "next lint",
+        "cypress:open": "cypress open"
+    },
+    "dependencies": {
+        "@next/font": "13.1.6",
+        "next": "13.1.6",
+        "next-auth": "^4.20.1",
+        "next-pwa": "^5.6.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-toastify": "^9.1.2",
+        "react-transition-group": "^4.4.5",
+        "swiper": "^9.1.1",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@types/node": "^18.15.11",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@types/react-transition-group": "^4.4.5",
+        "@types/uuid": "^9.0.1",
+        "@typescript-eslint/eslint-plugin": "^5.57.0",
+        "@typescript-eslint/parser": "^5.57.0",
+        "autoprefixer": "^10.4.13",
+        "cypress": "^12.13.0",
+        "eslint": "^8.37.0",
+        "eslint-config-next": "^13.2.4",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import-helpers": "^1.3.1",
+        "postcss": "^8.4.21",
+        "prettier": "^2.8.7",
+        "sass": "^1.60.0",
+        "tailwindcss": "^3.2.7",
+        "typescript": "^5.0.3"
+    }
 }
