--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,10 @@
+# You can override the included template(s) by including variable overrides
+# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
+# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/#customizing-settings
+# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
+# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
+# Note that environment variables can be set in several places
+# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
 stages:
 - test
 - build
@@ -53,27 +60,15 @@ lint_client:
   stage: test
   extends: ".frontend"
   script:
-    - npm run lint
-
+  - npm run lint
 code_quality:
-  # A Docker image with Semgrep installed.
   image: returntocorp/semgrep
-  # Run the "semgrep ci" command on the command line of the docker image.
   script: semgrep ci
-
   rules:
-  # Scan changed files in MRs, (diff-aware scanning):
-  - if: $CI_MERGE_REQUEST_IID
-
-  # Scan mainline (default) branches and report all findings.
-  - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-
+  - if: "$CI_MERGE_REQUEST_IID"
+  - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH"
   variables:
-    # Connect to Semgrep Cloud Platform through your SEMGREP_APP_TOKEN.
-    # Generate a token from Semgrep Cloud Platform > Settings
-    # and add it as a variable in your GitLab CI/CD project settings.
-    SEMGREP_APP_TOKEN: $SEMGREP_APP_TOKEN
-
+    SEMGREP_APP_TOKEN: "$SEMGREP_APP_TOKEN"
 build-api-image:
   extends: ".build-rules"
   script:
@@ -109,3 +104,4 @@ sast:
   stage: test
 include:
 - template: Security/SAST.gitlab-ci.yml
+- template: Security/Secret-Detection.gitlab-ci.yml
