--- a/api/package.json
+++ b/api/package.json
@@ -20,7 +20,9 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "test:ci": "jest --ci --reporters=default --reporters=jest-junit && gitlab-ci-reporter",
+        "test:ci-gitlab": "jest --ci --reporters=default --reporters=jest-junit"
     },
     "dependencies": {
         "@elastic/elasticsearch": "~7.12.0",
@@ -71,6 +73,7 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-unused-imports": "^2.0.0",
         "jest": "^29.3.1",
+        "jest-junit": "^16.0.0",
         "nodemon": "^2.0.20",
         "prettier": "^2.3.2",
         "prisma": "^4.10.1",
@@ -100,7 +103,21 @@
             "**/*.(t|j)s"
         ],
         "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
+        "testEnvironment": "node",
+        "reporters": [
+            "default",
+            "jest-junit"
+        ]
+    },
+    "jest-junit": {
+        "suiteName": "jest tests",
+        "outputDirectory": "./reports",
+        "outputName": "junit.xml",
+        "uniqueOutputName": false,
+        "classNameTemplate": "{classname}-{title}",
+        "titleTemplate": "{classname}-{title}",
+        "ancestorSeparator": " › ",
+        "usePathForSuiteName": true
     },
     "prisma": {
         "seed": "ts-node prisma/seed.ts"
