feature(shoppingList) => Add fetching for basic ingredients List of weekpla

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,100 +1,113 @@
 stages:
-- test
-- build
-- deploy
+  - test
+  - build
+  - deploy
 variables:
   RULES_CHANGES_PATH: "**/*"
-  DOCKER_TLS_CERTDIR: ''
+  DOCKER_TLS_CERTDIR: ""
   DOCKER_DRIVER: overlay2
 services:
-- docker:20.10-dind
+  - docker:20.10-dind
 ".build-rules":
   image: docker:20.10-dind
   stage: build
   only:
-  - master
+    - master
   before_script:
-  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
 ".base-rules":
   image: node:18-alpine
   interruptible: true
   rules:
-  - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH"
-    when: always
-  - if: $CI_PIPELINE_SOURCE == "push"
-    when: never
-  - if: "$CI_COMMIT_TAG"
-    when: never
-  - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-    changes:
-    - "$RULES_CHANGES_PATH"
-  - when: manual
-    allow_failure: true
+    - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH"
+      when: always
+    - if: $CI_PIPELINE_SOURCE == "push"
+      when: never
+    - if: "$CI_COMMIT_TAG"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+      changes:
+        - "$RULES_CHANGES_PATH"
+    - when: manual
+      allow_failure: true
 ".backend":
   extends: ".base-rules"
   before_script:
-  - cd api
-  - npm ci
+    - cd api
+    - npm ci
   variables:
     RULES_CHANGES_PATH: api/**/*
 ".frontend":
   extends: ".base-rules"
   before_script:
-  - cd frontend
-  - npm ci
+    - cd frontend
+    - npm ci
   variables:
     RULES_CHANGES_PATH: frontend/**/*
 lint_api:
   stage: test
   extends: ".backend"
   script:
-  - npm run lint
+    - npm run lint
 lint_client:
   stage: test
   extends: ".frontend"
   script:
-  - npm run lint
+    - npm run lint
 code_quality:
   image: returntocorp/semgrep
   script: semgrep ci
   rules:
-  - if: "$CI_MERGE_REQUEST_IID"
-  - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH"
+    - if: "$CI_MERGE_REQUEST_IID"
+    - if: "$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH"
   variables:
     SEMGREP_APP_TOKEN: "$SEMGREP_APP_TOKEN"
+
+api_unit_tests:
+  stage: test
+  extends: ".backend"
+  script:
+    - npm run test:ci-gitlab
+  artifacts:
+    when: always
+    reports:
+      junit:
+        - reports/junit.xml
+
 build-api-image:
   extends: ".build-rules"
   script:
-  - cd api
-  - docker build -t $CI_REGISTRY_IMAGE/api:latest .
-  - docker push $CI_REGISTRY_IMAGE/api:latest
+    - cd api
+    - docker build -t $CI_REGISTRY_IMAGE/api:latest .
+    - docker push $CI_REGISTRY_IMAGE/api:latest
 build-client-image:
   extends: ".build-rules"
   script:
-  - cd frontend
-  - docker build -t $CI_REGISTRY_IMAGE/client:latest .
-  - docker push $CI_REGISTRY_IMAGE/client:latest
+    - cd frontend
+    - docker build -t $CI_REGISTRY_IMAGE/client:latest .
+    - docker push $CI_REGISTRY_IMAGE/client:latest
 deploy:
   stage: deploy
   image: ubuntu:latest
   only:
-  - master
+    - master
   before_script:
-  - apt-get update -qq
-  - apt-get install -qq git
-  - which ssh-agent || ( apt-get install -qq openssh-client )
-  - eval $(ssh-agent -s)
-  - ssh-add <(echo "$VM_ACCESS_KEY")
-  - mkdir -p ~/.ssh
-  - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+    - apt-get update -qq
+    - apt-get install -qq git
+    - which ssh-agent || ( apt-get install -qq openssh-client )
+    - eval $(ssh-agent -s)
+    - ssh-add <(echo "$VM_ACCESS_KEY")
+    - mkdir -p ~/.ssh
+    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   environment:
     name: production
     url: http://193.170.119.139
   script:
-  - ssh admin@193.170.119.139 -p 5412 "cd tastyplan-prod && sudo docker compose down
-    && sudo docker system prune -a -f && sudo docker compose up -d && exit"
+    - ssh admin@193.170.119.139 -p 5412 "cd tastyplan-prod && sudo docker compose down
+      && sudo docker system prune -a -f && sudo docker compose up -d && exit"
+
 sast:
   stage: test
 include:
-- template: Security/SAST.gitlab-ci.yml
-- template: Security/Secret-Detection.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
+  - template: Security/Secret-Detection.gitlab-ci.yml
