--- a/.env.dev
+++ b/.env.dev
@@ -3,12 +3,12 @@ REDIS_PORT="6379"
 
 POSTGRES_DB="docker-postgres"
 POSTGRES_PORT=5432
-POSTGRES_USER=
-POSTGRES_PASSWORD=
+POSTGRES_USER="username"
+POSTGRES_PASSWORD="password"
 POSTGRES_HOST="postgres"
 
-PGADMIN_DEFAULT_EMAIL=
-PGADMIN_DEFAULT_PASSWORD=
+PGADMIN_DEFAULT_EMAIL="admin@admin.com"
+PGADMIN_DEFAULT_PASSWORD="admin"
 
 API_PORT="3000"
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
@@ -16,9 +16,9 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST
 MODE=DEV
 RUN_MIGRATIONS=true
 
-SECRETKEY=
+SECRETKEY="qY6aYs7lKasdgxuoEhQOMJiahxL56OzcGS+lXZlaUo4="
 EXPIRESIN="60 days"
 
-ELASTIC_PASSWORD=
+ELASTIC_PASSWORD="admin"
 ELASTIC_NODE="http://elasticsearch:9200"
-ELASTIC_USERNAME=
+ELASTIC_USERNAME="elastic"
