add deploy trigger

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -74,37 +74,39 @@ api_unit_tests:
       junit:
         - api/reports/junit.xml
 
-build-api-image:
+build-api:
   extends: ".build-rules"
   script:
     - cd api
     - docker build -t $CI_REGISTRY_IMAGE/api:latest .
     - docker push $CI_REGISTRY_IMAGE/api:latest
-build-client-image:
+build-client:
   extends: ".build-rules"
   script:
     - cd frontend
     - docker build -t $CI_REGISTRY_IMAGE/client:latest .
     - docker push $CI_REGISTRY_IMAGE/client:latest
-deploy:
+trigger-deploy-prod:
   stage: deploy
   image: ubuntu:latest
   only:
     - master
-  before_script:
-    - apt-get update -qq
-    - apt-get install -qq git
-    - which ssh-agent || ( apt-get install -qq openssh-client )
-    - eval $(ssh-agent -s)
-    - ssh-add <(echo "$VM_ACCESS_KEY")
-    - mkdir -p ~/.ssh
-    - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   environment:
     name: production
     url: http://193.170.119.139
   script:
-    - ssh admin@193.170.119.139 -p 5412 "cd tastyplan-prod && sudo docker compose down
-      && sudo docker system prune -a -f && sudo docker compose up -d && exit"
+    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=main "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
+
+# trigger-deploy-test:
+#   stage: deploy
+#   image: ubuntu:latest
+#   only:
+#     - master
+#   environment:
+#     name: Staging
+#     url: http://193.170.119.147
+#   script:
+#     - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=staging "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
 
 sast:
   stage: test
