--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,6 +94,9 @@ trigger-deploy-prod:
   environment:
     name: production
     url: http://193.170.119.139
+  before_script:
+    - apt update
+    - apt install curl
   script:
     - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=main "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
 
