--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ trigger-deploy-prod:
     - apt-get update -qq
     - apt-get install -qq curl
   script:
-    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=main "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
+    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=master "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
 
 # trigger-deploy-test:
 #   stage: deploy
@@ -108,6 +108,9 @@ trigger-deploy-prod:
 #   environment:
 #     name: Staging
 #     url: http://193.170.119.147
+#   before_script:
+#     - apt-get update -qq
+#     - apt-get install -qq curl
 #   script:
 #     - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=staging "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
 
