--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
     "db:seed": "cd api && npx prisma db seed",
     "setup:dev": "npm run containers:dev && npm run db:seed",
     "test:api": "cd api && jest"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.7"
   }
+
 }
