--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,22 @@ lint_client:
   script:
     - npm run lint
 
+e2e:
+  stage: test
+  image: cypress/browsers:node18.12.0-chrome107
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master"'
+      when: always
+  script:
+      - npm ci
+      - npm run e2e
+  artifacts:
+    when: always
+    paths:
+      - test-results.xml
+    reports:
+      junit: test-results.xml
+
 build-api-image:
   extends: .build-rules
   script:
