--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "e2e": "cypress run --browser chrome --headless --reporter junit"
   },
   "devDependencies": {
-    "cypress": "^12.13.0"
+    "cypress": "^12.13.0",
+    "typescript": "^5.1.3"
   }
 }
