run e2e test in pipeline

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "db:seed": "cd api && npx prisma db seed",
     "setup:dev": "npm run containers:dev && npm run db:seed",
     "test:api": "cd api && jest",
+    "cypress:open": "cypress open",
     "e2e": "cypress run --browser chrome --headless --reporter junit"
   },
   "devDependencies": {
