--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "scripts": {
     "containers:dev": "docker-compose up --build -d",
     "dev": "docker-compose up -d",
-    "db:seed": "cd api && npx prisma db seed",
-    "setup:dev": "npm run containers:dev && npm run db:seed",
+    "setup:dev": "npm run containers:dev",
     "test:api": "cd api && jest",
     "e2e": "cypress run --browser chrome --headless --reporter junit"
   },
