--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ services:
   api:
     build:
       context: ./api
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
       # Only will build development stage from our dockerfile
     # Run in dev Mode: npm run start:dev
-    command: npm run start:watch
+    # command: npm run start:watch
     container_name: api
     env_file:
-        - .env.dev
+        - .env
     environment:
         - NODE_ENV=development
         - DATABASE_URL=${DATABASE_URL}
@@ -37,7 +37,7 @@ services:
   postgres:
     image: postgres
     restart: unless-stopped
-    env_file: .env.dev
+    env_file: .env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -56,7 +56,7 @@ services:
     ports:
       - 8080:8080
     restart: unless-stopped
-    env_file: .env.dev
+    env_file: .env
     environment:
       - SECRET_KEY=${SECRET_KEY}
     volumes:
@@ -71,7 +71,7 @@ services:
   elasticsearch:
     image: elasticsearch:7.13.0
     container_name: elasticsearch
-    env_file: .env.dev
+    env_file: .env
     environment:
       - bootstrap.memory_lock=true
       - discovery.type=single-node
