--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,20 +2,34 @@ stages:
   - test
   - build
   - deploy
+
 variables:
   RULES_CHANGES_PATH: "**/*"
   DOCKER_TLS_CERTDIR: ""
   DOCKER_DRIVER: overlay2
+
 services:
   - docker:20.10-dind
-".build-rules":
+
+.build-rules:
   image: docker:20.10-dind
   stage: build
+  rules: 
+    - if: $CI_COMMIT_REF_NAME == "master"
+      when: always
+      variables: 
+        IMAGE_TAG: latest
+    - if: $CI_COMMIT_REF_NAME == "dev"
+      when: always
+      variables: 
+        IMAGE_TAG: pre-release
   only:
     - master
+    - dev
   before_script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-".base-rules":
+
+.base-rules:
   image: node:18-alpine
   interruptible: true
   rules:
@@ -30,30 +44,35 @@ services:
         - "$RULES_CHANGES_PATH"
     - when: manual
       allow_failure: true
-".backend":
+
+.backend:
   extends: ".base-rules"
   before_script:
     - cd api
     - npm ci
   variables:
     RULES_CHANGES_PATH: api/**/*
-".frontend":
+
+.frontend:
   extends: ".base-rules"
   before_script:
     - cd frontend
     - npm ci
   variables:
     RULES_CHANGES_PATH: frontend/**/*
+
 lint_api:
   stage: test
   extends: ".backend"
   script:
     - npm run lint
+
 lint_client:
   stage: test
   extends: ".frontend"
   script:
     - npm run lint
+
 code_quality:
   image: returntocorp/semgrep
   script: semgrep ci
@@ -94,14 +113,16 @@ build-api:
   extends: ".build-rules"
   script:
     - cd api
-    - docker build -t $CI_REGISTRY_IMAGE/api:latest .
-    - docker push $CI_REGISTRY_IMAGE/api:latest
+    - docker build -t $CI_REGISTRY_IMAGE/api:$IMAGE_TAG .
+    - docker push $CI_REGISTRY_IMAGE/api:$IMAGE_TAG
+
 build-client:
   extends: ".build-rules"
   script:
     - cd frontend
-    - docker build -t $CI_REGISTRY_IMAGE/client:latest .
-    - docker push $CI_REGISTRY_IMAGE/client:latest
+    - docker build -t $CI_REGISTRY_IMAGE/client:$IMAGE_TAG .
+    - docker push $CI_REGISTRY_IMAGE/client:$IMAGE_TAG
+
 trigger-deploy-prod:
   stage: deploy
   image: ubuntu:latest
@@ -116,19 +137,19 @@ trigger-deploy-prod:
   script:
     - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=master "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
 
-# trigger-deploy-test:
-#   stage: deploy
-#   image: ubuntu:latest
-#   only:
-#     - master
-#   environment:
-#     name: Staging
-#     url: http://193.170.119.147
-#   before_script:
-#     - apt-get update -qq
-#     - apt-get install -qq curl
-#   script:
-#     - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=staging "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
+trigger-deploy-test:
+  stage: deploy
+  image: ubuntu:latest
+  only:
+    - dev
+  environment:
+    name: Staging
+    url: http://193.170.119.147
+  before_script:
+    - apt-get update -qq
+    - apt-get install -qq curl
+  script:
+    - 'curl --fail --request POST --form token=$TRIGGER_TOKEN --form ref=staging "https://gitlab.mediacube.at/api/v4/projects/10184/trigger/pipeline"'
 
 sast:
   stage: test
