add migration to docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ services:
   api:
     build:
       context: ./api
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
       # Only will build development stage from our dockerfile
     # Run in dev Mode: npm run start:dev
-    # command: npm run start:watch
+    command: npm run start:watch
     container_name: api
     env_file:
         - .env
