--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,6 +7,7 @@ FROM node:18-alpine as build
 WORKDIR /app
 
 COPY package*.json ./
+COPY prisma ./prisma/
 RUN npm ci
 
 COPY . .
@@ -30,8 +31,11 @@ RUN npm ci --only=production && npm cache clean --force
 FROM node:18-alpine as production
 # Copy the bundled code from the build stage to the production image
 COPY --from=build /app/node_modules ./node_modules
+COPY --from=build /app/package*.json ./
 COPY --from=build /app/dist ./dist
+# copy prisma schema
+COPY --from=build /app/prisma ./prisma
 
 # Start the server using the production build
-CMD [ "node", "dist/main.js" ]
+CMD [ "npm", "run", "start:prod:migrate" ]
 
