--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
         "start:watch": "npx prisma migrate dev && nest build --webpack --webpackPath webpack-hmr.config.js --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
+        "start:prod:migrate": "npx prisma migrate deploy && npm run start:prod",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
         "fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
