--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
         "start:dev": "nest start --tsc --watch",
-        "migrate": "npx prisma migrate dev",
+        "migrate": "dotenv -e .env.development -- npx prisma migrate dev",
         "start:watch": "npx prisma migrate dev && nest build --webpack --webpackPath webpack-hmr.config.js --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
@@ -37,7 +37,7 @@
         "@nestjs/platform-express": "^9.0.0",
         "@nestjs/serve-static": "^3.0.1",
         "@nestjs/swagger": "^6.2.1",
-        "@prisma/client": "^4.10.1",
+        "@prisma/client": "^4.15.0",
         "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.3",
         "bcrypt": "^5.1.0",
