--- a/.env
+++ b/.env
@@ -16,8 +16,8 @@ DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST
 MODE=DEV
 RUN_MIGRATIONS=true
 
-SECRETKEY="qY6aYs7lKasdgxuoEhQOMJiahxL56OzcGS+lXZlaUo4="
-EXPIRESIN="60 days"
+SECRET_KEY="qY6aYs7lKasdgxuoEhQOMJiahxL56OzcGS+lXZlaUo4="
+EXPIRES_IN="60 days"
 
 ELASTIC_PASSWORD="admin"
 ELASTIC_NODE="http://elasticsearch:9200"
