change root depending on node env

--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -7,7 +7,7 @@ ENV DATABASE_URL $DATABASE_URL
 WORKDIR /app
 
 COPY . /app
-
+ENV NODE_ENV development
 RUN npm install
 
 CMD [ "npx", "prisma", "migrate", "dev" ]
