--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
     command: npm run start:watch
     container_name: api
     env_file:
-        - .env
+      - .env
     environment:
-        - NODE_ENV=development
-        - DATABASE_URL=${DATABASE_URL}
-        - SECRET_KEY=${SECRET_KEY}
-        - EXPIRES_IN=${EXPIRES_IN}
+      - NODE_ENV=development
+      - DATABASE_URL=${DATABASE_URL}
+      - SECRET_KEY=${SECRET_KEY}
+      - EXPIRES_IN=${EXPIRES_IN}
     ports:
       - 3000:3000
     volumes:
@@ -30,20 +30,20 @@ services:
     image: redis
     ports:
       - 6379:6379
-    volumes: 
+    volumes:
       - redis:/data
     networks:
       - private
   postgres:
-    image: postgres
+    image: postgres:15.0
     restart: unless-stopped
     env_file: .env
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    ports: 
-      - '6543:5432'
+    ports:
+      - "6543:5432"
     volumes:
       - postgresdata:/var/lib/postgresql/data
     networks:
@@ -101,4 +101,3 @@ volumes:
     driver: local
   redis:
     driver: local
-      
