--- a/api/.env
+++ b/api/.env
@@ -2,7 +2,7 @@ POSTGRES_DB="docker-postgres"
 POSTGRES_PORT=6543
 POSTGRES_USER="username"
 POSTGRES_PASSWORD="password"
-POSTGRES_HOST="postgres"
+POSTGRES_HOST="localhost"
 
 API_PORT="3000"
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
+DATABASE_URL="postgresql://username:password@postgres:6543/docker-postgres?schema=public"
