--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       - postgresdata:/var/lib/postgresql/data
     networks:
       - private
+      - public
 
   frontend:
     build:
