--- a/api/.env
+++ b/api/.env
@@ -5,4 +5,4 @@ POSTGRES_PASSWORD="password"
 POSTGRES_HOST="localhost"
 
 API_PORT="3000"
-DATABASE_URL="postgresql://username:password@postgres:6543/docker-postgres?schema=public"
+DATABASE_URL="postgresql://username:password@localhost:6543/docker-postgres?schema=public"
