--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@next/font": "13.1.6",
+        "framer-motion": "^10.12.16",
         "next": "13.1.6",
         "next-auth": "^4.20.1",
         "next-pwa": "^5.6.0",
