--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,6 @@
-DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
-
 POSTGRES_DB="docker-postgres"
 POSTGRES_PORT=6543
 POSTGRES_USER="username"
 POSTGRES_PASSWORD="password"
-POSTGRES_HOST="postgres"
+POSTGRES_HOST="localhost"
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public"
