--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,8 @@
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
         "start:dev": "nest start --tsc --watch",
-        "migrate": "dotenv -e .env.development -- npx prisma migrate dev",
-        "start:watch": "npx prisma migrate dev && nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+        "migrate": "dotenv npx prisma migrate dev",
+        "start:watch": "npx prisma migrate deploy && nest build --webpack --webpackPath webpack-hmr.config.js --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "start:prod:migrate": "npx prisma migrate deploy && npm run start:prod",
