--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
         "react-toastify": "^9.1.2",
         "react-transition-group": "^4.4.5",
         "swiper": "^9.1.1",
-        "uuid": "^9.0.0"
+        "uuid": "^9.0.0",
+        "zustand": "^4.3.8"
     },
     "devDependencies": {
         "@types/node": "^18.15.11",
