--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     },
     "devDependencies": {
         "@types/node": "^18.15.11",
-        "@types/react": "^18.0.28",
+        "@types/react": "18.2.14",
         "@types/react-dom": "^18.0.11",
         "@types/react-transition-group": "^4.4.5",
         "@types/uuid": "^9.0.1",
@@ -39,6 +39,6 @@
         "prettier": "^2.8.7",
         "sass": "^1.60.0",
         "tailwindcss": "^3.2.7",
-        "typescript": "^5.0.3"
+        "typescript": "5.1.3"
     }
 }
