switch to app directory

--- a/api/Dockerfile.dev
+++ b/api/Dockerfile.dev
@@ -8,7 +8,7 @@ WORKDIR /app
 
 COPY . /app
 ENV NODE_ENV development
-RUN npm install
+RUN npm ci
 
 CMD [ "npx", "prisma", "migrate", "dev" ]
 EXPOSE 3000
