--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,11 @@
     "dependencies": {
         "@next/font": "13.1.6",
         "framer-motion": "^10.12.16",
-        "next": "13.1.6",
+        "next": "^13.4.11",
         "next-auth": "^4.22.1",
         "next-pwa": "^5.6.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-toastify": "^9.1.2",
         "react-transition-group": "^4.4.5",
         "swiper": "^9.1.1",
@@ -32,7 +32,7 @@
         "@typescript-eslint/parser": "^5.57.0",
         "autoprefixer": "^10.4.13",
         "eslint": "^8.37.0",
-        "eslint-config-next": "^13.2.4",
+        "eslint-config-next": "^13.4.11",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import-helpers": "^1.3.1",
         "postcss": "^8.4.21",
