--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "scripts": {
+    "preinstall": "cd frontend && npm install && cd ../api && npm install && cd ..",
     "containers:dev": "docker-compose up --build -d",
     "dev": "docker-compose up --build -d",
     "setup:dev": "npm run containers:dev",
     "test:api": "cd api && jest",
     "cypress:open": "cypress open",
-    "e2e": "cypress run --browser chrome --headless --reporter junit"
+    "e2e": "cypress run --browser chrome --headless --reporter junit",
+    "browser:web": "start http://localhost:8080",
+    "browser": "npm run browser:web"
   },
   "devDependencies": {
     "cypress": "^12.13.0",
