bugfix recipe page

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ EXPIRES_IN="60 days"
 ELASTIC_PASSWORD="admin"
 ELASTIC_NODE="http://elasticsearch:9200"
 ELASTIC_USERNAME="elastic"
+
+RECOMMENDER_URL="http://recommender:5000"
+
+API_URL="http://api:${API_PORT}"
