--- a/.env
+++ b/.env
@@ -26,3 +26,5 @@ ELASTIC_USERNAME="elastic"
 RECOMMENDER_URL="http://recommender:5000"
 
 API_URL="http://api:${API_PORT}"
+
+NEXT_PUBLIC_GOOGLE_ANALYTICS= 'G-8V6XJ6QLC5'
