fix: a valid commit message

--- a/package.json
+++ b/package.json
@@ -9,18 +9,14 @@
     "cypress:open": "cypress open",
     "e2e": "cypress run --browser chrome --headless --reporter junit",
     "browser:web": "start http://localhost:8080",
-    "browser": "npm run browser:web"
+    "browser": "npm run browser:web",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
     "@commitlint/config-conventional": "^18.1.0",
     "cypress": "^12.13.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
     "typescript": "^5.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "node commit-msg.js"
-    }
   }
 }
