fix: reference right icon for pwa

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -4,7 +4,7 @@
     "description": "This is the official PWA for TastyPlan",
     "icons": [
         {
-            "src": "android-launchericon-144-144.png",
+            "src": "./pwa_icon_set/icon_144x144.png",
             "sizes": "144x144"
         }
     ],
