feature(api) => Add second endpoint for reset

--- a/.env
+++ b/.env
@@ -28,3 +28,5 @@ RECOMMENDER_URL="http://recommender:5000"
 API_URL="http://api:${API_PORT}"
 
 NEXT_PUBLIC_GOOGLE_ANALYTICS= 'G-8V6XJ6QLC5'
+
+BASE_URL=http://localhost:8080
