feat(docker-compose): check for service healthy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,14 @@ services:
       - /app/node_modules
       - ./api/src:/app/src
     depends_on:
-      - redis
-      - postgres
-      - elasticsearch
-      - recommender
+      elasticsearch:
+        condition: service_healthy
+      redis:
+        condition: service_started
+      postgres:
+        condition: service_started
+      recommender:
+        condition: service_started
     networks:
       - private
       - public
