feat(ci): only run on master for now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -143,6 +143,8 @@ trigger-deploy-prod:
 
 trigger-deploy-staging:
   stage: deploy
+  only:
+    - master
   environment:
     name: Staging
     url: http://193.170.119.147
